--- a/website/src/pages/docs/features/cors.mdx
+++ b/website/src/pages/docs/features/cors.mdx
@@ -1,20 +1,16 @@
----
-id: cors
-title: Configuring CORS with Yoga
-sidebar_label: CORS
----
+# Configuring CORS with Yoga
 
-CORS stands for Cross Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their own domain.
+CORS stands for Cross-Origin Resource Sharing. In a nutshell, as a security measure, browsers aren't allowed to access resources outside their domain.
 
-If your api and web apps are deployed to different domains (or subdomains), you'll have to worry about CORS. For example, if your web client is deployed to example.com but your Yoga server is api.example.com. For security reasons your browser will not allow XHR requests (like the kind that the GraphQL client makes) to a domain other than the one currently in the browser's address bar.
+If your API and web apps are deployed to different domains (or subdomains), you'll have to worry about CORS. For example, if your web client is deployed to example.com but your Yoga server is api.example.com. For security reasons, your browser will not allow XHR requests (like the kind that the GraphQL client makes) to a domain other than the one currently in the browser's address bar.
 
 To deal with this you have two options:
 
-_1. Avoid CORS by proxying your requests_
-e.g. If you setup a proxy or redirect to forward requests from `example.com/api/*` to `api.example.com`, you avoid CORS issues all together.
+1. Avoid CORS by proxying your requests\_
+   e.g. If you setup a proxy or redirect to forward requests from `example.com/api/*` to `api.example.com`, you avoid CORS issues all together.
 
-_2. Configure Yoga to send back CORS headers_
-Yoga comes with CORS support out of the box - CORS can be configured when creating the server either by passing a CORSOptions object, or a builder function that returns the CORSOptions object.
+2. Configure Yoga to send back CORS headers\_
+   Yoga comes with CORS support out of the box - CORS can be configured when creating the server either by passing a CORSOptions object, or a builder function that returns the CORSOptions object.
 
 ```ts
 export type CORSOptions =
@@ -29,7 +25,7 @@ export type CORSOptions =
   | false
 ```
 
-### Example configuration using CORSOptions
+### Example Configuration Using CORSOptions
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
@@ -54,7 +50,7 @@ Access-Control-Allow-Methods: POST
 Access-Control-Allow-Headers: X-Custom-Header
 ```
 
-### Example configuration using builder function
+### Example Configuration Using Builder Function
 
 You can also pass a function to the cors property, that takes your request and contructs the options
 
@@ -80,13 +76,13 @@ This will return the same headers as the previous example, but take the `origin`
 
 By default, GraphQL Yoga will return `Access-Control-Allow-Origin: *` when preflight requests are made.
 
-This means cross origin requests from browsers work out of the box - however it may be appropriate to lock to a specifc domain before deploying to production.
+This means cross-origin requests from browsers work out of the box - however, it may be appropriate to lock to a specific domain before deploying to production.
 
 ## Disabling CORS
 
 You can disable CORS on your Yoga server by simply passing `false` as the cors property
 
-**For example:**
+### Disabling CORS Example
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
