--- a/website/src/pages/docs/features/testing.mdx
+++ b/website/src/pages/docs/features/testing.mdx
@@ -1,8 +1,4 @@
----
-id: testing
-title: Testing
-sidebar_label: Testing
----
+# Testing
 
 GraphQL Yoga makes it easy to test your GraphQL API. It has built-in support for HTTP injection. You can use any testing framework of your choice.
 
@@ -25,7 +21,7 @@ console.assert(
 )
 ```
 
-## Using `fetch` to test just like browsers on any JS environment
+## Using `fetch` to Test Just Like Browsers on Any JS Environment
 
 ```ts
 import { createServer } from '@graphql-yoga/common'
@@ -49,7 +45,7 @@ console.assert(
 )
 ```
 
-## Using `supertest` for Node.js
+## Using `supertest` For Node.js
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
