--- a/website/src/pages/docs/features/context.mdx
+++ b/website/src/pages/docs/features/context.mdx
@@ -1,8 +1,4 @@
----
-id: context
-title: GraphQL Context
-sidebar_label: Context
----
+# GraphQL Context
 
 A context is usually created for each execution of a GraphQL Operation and it is passed to the resolver functions as a third argument.
 You can learn more about [`Context` in GraphQL Tools docs](https://www.graphql-tools.com/docs/connectors).
@@ -11,17 +7,17 @@ It is commonly used for doing dependency injection.
 
 Within GraphQL Yoga, the context object is generated per HTTP request.
 
-## Default context
+## Default Context
 
 By default, GraphQL Yoga provides the following values in the context object independently from your environment and setup;
 
-- **_request_**: [Fetch API `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform-independent way. It can be useful for accessing headers in order to authenticate an user.
+- **_request_**: [Fetch API `Request` object](https://developer.mozilla.org/en-US/docs/Web/API/Request) that represents the incoming HTTP request in platform-independent way. It can be useful for accessing headers to authenticate a user.
 - **_query_**: The `DocumentNode` that was parsed from the GraphQL query string
 - **_operationName_**: The operation name selected from the incoming query
 - **_variables_**: The variables that were defined in the query
 - **_extensions_**: The extensions that were received from the client
 
-**Context usage example: log headers**
+### Context Usage Example: Log Headers
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
@@ -52,11 +48,11 @@ curl -X POST http://localhost:4000/graphql \
   --data-raw '{"query": "query { logHeader }"}'
 ```
 
-## Extending the initial context
+## Extending The Initial Context
 
 You can extend the existing context by using the `context` property.
 
-**Context extension example: object**
+### Example: Object
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
@@ -83,7 +79,7 @@ server.start()
 
 You can also pass a function as the `context` property. The function will be invoked for each incoming GraphQL request with the initial context as an argument and after the invocation it will be merged with the initial context.
 
-**Context extension example: function returning an object**
+### Example: Function Returning an Object
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
@@ -112,7 +108,7 @@ server.start()
 
 The function can either return an object or a Promise that resolves to an object.
 
-**Context extension example: function returning a Promise**
+### Example: Function Returning a Promise
 
 ```ts
 import { createServer } from '@graphql-yoga/node'
@@ -139,10 +135,10 @@ const server = createServer({
 server.start()
 ```
 
-## Advanced context life-cycle
+## Advanced Context Life-cycle
 
-For most users the previous sections are already sufficient.
-If you, however, need to integrate Yoga with a custom framework and/or want to attach runtime/framework specific Request/Response objects to the context.
+For most users, the previous sections are already sufficient.
+If you, however, need to integrate Yoga with a custom framework and/or want to attach runtime/framework-specific Request/Response objects to the context.
 Also if you are just curious about how Yoga works in depth, this might also be interesting to you!
 
 There are 4 steps that GraphQL Yoga follows to generate the final context object:
@@ -175,7 +171,7 @@ const serverContext = { ...defaultContext, req, res }
 
 Thus when using `@graphql-yoga/node`, it is possible to access `context.req` and `context.res` within the GraphQL resolvers or the user context factory function.
 
-However, we recommend avoiding to use `context.req` and `context.res` wherever possible and instead favor `context.request`, as it is more future proof (as Node.js HTTP servers adopt the Fetch Response API).
+However, we recommend avoiding using `context.req` and `context.res` wherever possible and instead favor `context.request`, as it is more future-proof (as Node.js HTTP servers adopt the Fetch Response API).
 
 #### Advanced Node.js frameworks (Fastify/Koa)
 
@@ -184,8 +180,8 @@ It is not possible to use a basic Node.js [RequestListener](https://nodejs.org/a
 
 Since they limit the access to the underlying raw `ServerResponse` object, the recipes use the `.handleIncomingMessage` method and pass the server context as the second parameter.
 
-E.g. for **_Fastify_**, a [`Reply`](<(https://www.fastify.io/docs/latest/Reply/)>) object is attached to the server context instead of the `Request` object, which is an intermediate framework specific response format.
-Also note the generic definition in `createServer` for corretcly typing the server context.
+E.g. for **_Fastify_**, a [`Reply`](<(https://www.fastify.io/docs/latest/Reply/)>) object is attached to the server context instead of the `Request` object, which is an intermediate framework-specific response format.
+Also, note the generic definition in `createServer` for correctly typing the server context.
 
 ```ts
 const graphQLServer = createServer<{
@@ -226,9 +222,9 @@ const server = createServer({
 server.start()
 ```
 
-In this case your final context object will have an extra `foo` property.
+In this case, your final context object will have an extra `foo` property.
 
-See the above section [`extending the initial context`](#extending-the-initial-context) for more details and useage examples.
+See the above section [`extending the initial context`](#extending-the-initial-context) for more details and usage examples.
 
 ## Envelop Plugins
 
