--- a/website/src/pages/docs/integrations/integration-with-aws-lambda.mdx
+++ b/website/src/pages/docs/integrations/integration-with-aws-lambda.mdx
@@ -1,24 +1,19 @@
----
-id: integration-with-aws-lambda
-title: Integration with AWS Lambda
-sidebar_label: AWS Lambda
-type: Guide
----
+import { PackageCmd, Callout } from '@theguild/components'
+
+# Integration with AWS Lambda
 
 AWS Lambda is a serverless computing platform that makes it easy to build applications that run on the AWS cloud. GraphQL Yoga is platform agnostic so they can fit together easily.
-In order to reduce the boilerplate we prefer to use [Serverless Express from Vendia](https://github.com/vendia/serverless-express).
+To reduce the boilerplate we prefer to use [Serverless Express from Vendia](https://github.com/vendia/serverless-express).
 
 ## Installation
 
-<PackageInstall
+<PackageCmd
   packages={['graphql', '@vendia/serverless-express', '@graphql-yoga/node']}
 />
 
 ## Example
 
-`graphql.ts`
-
-```ts
+```ts filename="graphql.ts"
 import type { Handler } from '@aws-cdk/aws-lambda'
 import { createServer } from '@graphql-yoga/node'
 import { configure } from '@vendia/serverless-express'
@@ -33,4 +28,7 @@ export const handler: Handler = configure({
 })
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/aws-lambda)
+<Callout type="info">
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/aws-lambda)
+</Callout>
