--- a/website/src/pages/docs/integrations/integration-with-cloudflare-workers.mdx
+++ b/website/src/pages/docs/integrations/integration-with-cloudflare-workers.mdx
@@ -1,17 +1,19 @@
----
-id: integration-with-cloudflare-workers
-title: Integration with Cloudflare Workers
-sidebar_label: Cloudflare Workers
-type: Guide
----
+import { PackageCmd, Callout } from '@theguild/components'
 
-GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
+# Integration with Cloudflare Workers
+
+GraphQL Yoga provides you with a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
 
 [Cloudflare Workers](https://developers.cloudflare.com/workers) provides a serverless execution environment that allows you to create entirely new applications or augment existing ones without configuring or maintaining infrastructure.
 
 You will want to use the package `@graphql-yoga/common` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects when building GraphQL powered Cloudflare Workers.
 
-> Watch [Episode #48 of `graphql.wtf`](https://graphql.wtf/episodes/48-graphql-yoga-cloudflare-workers-kv) for a quick introduction to using GraphQL Yoga with Cloudflare Workers, and KV:
+<Callout type="info">
+  Watch [Episode #48 of
+  `graphql.wtf`](https://graphql.wtf/episodes/48-graphql-yoga-cloudflare-workers-kv)
+  for a quick introduction to using GraphQL Yoga with Cloudflare Workers, and
+  KV:
+</Callout>
 
 <br />
 
@@ -27,13 +29,11 @@ You will want to use the package `@graphql-yoga/common` which has an agnostic HT
 
 ## Installation
 
-<PackageInstall packages={['graphql', '@graphql-yoga/common']} />
+<PackageCmd packages={['graphql', '@graphql-yoga/common']} />
 
-## Example with regular `fetch` event listener
+## Example with Regular `fetch` Event Listener
 
-`listener.mjs`
-
-```ts
+```ts filename="listener.mjs"
 import { createServer } from '@graphql-yoga/common'
 
 const server = createServer()
@@ -41,13 +41,14 @@ const server = createServer()
 server.start()
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
+<Callout type="info">
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/service-worker)
+</Callout>
 
 ## Example with Modules Approach
 
-`modules.mjs`
-
-```ts
+```ts filename="modules.mjs"
 import { createServer } from '@graphql-yoga/common'
 
 export default createServer()
@@ -111,11 +112,14 @@ export default {
 }
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
+<Callout type="info">
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/cloudflare-modules)
+</Callout>
 
 ## Enabling Subscriptions
 
-In order to enable Server Sent Events based subscriptions with Cloudflare Workers, you should add a compatibility flag in your wrangler configuration file like below;
+To enable Server-Sent Events based subscriptions with Cloudflare Workers, you should add a compatibility flag in your wrangler configuration file like below;
 
 ```toml
 compatibility_flags = ["streams_enable_constructors"]
