--- a/website/src/pages/docs/integrations/integration-with-deno.mdx
+++ b/website/src/pages/docs/integrations/integration-with-deno.mdx
@@ -1,19 +1,14 @@
----
-id: integration-with-deno
-title: Integration with Deno
-sidebar_label: Deno
-type: Guide
----
+import { Callout } from '@theguild/components'
 
-GraphQL Yoga provides you a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
+# Integration with Deno
+
+GraphQL Yoga provides you with a cross-platform GraphQL Server. So you can easily integrate it into any platform besides Node.js.
 [Deno is a simple, modern and secure runtime for JavaScript and TypeScript that uses V8 and is built in Rust](https://deno.land/).
 But instead of `graphql-yoga` npm package, we will use `@graphql-yoga/common` which has an agnostic HTTP handler using [Fetch API](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch)'s [`Request`](https://developer.mozilla.org/en-US/docs/Web/API/Request) and [`Response`](https://developer.mozilla.org/en-US/docs/Web/API/Response) objects.
 
 ## Example
 
-`deno-example.ts`
-
-```ts
+```ts filename="deno-example.ts"
 import { serve } from 'https://deno.land/std@0.117.0/http/server.ts'
 import { createServer } from 'https://cdn.skypack.dev/@graphql-yoga/common?dts'
 
@@ -26,4 +21,7 @@ serve(graphQLServer, {
 console.log('Server is running on http://localhost:4000/graphql')
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/deno)
+<Callout type="info">
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/deno)
+</Callout>
