--- a/website/src/pages/docs/integrations/integration-with-express.mdx
+++ b/website/src/pages/docs/integrations/integration-with-express.mdx
@@ -1,20 +1,17 @@
----
-id: integration-with-express
-title: Integration with Express
-sidebar_label: Express
-type: Guide
----
+import { PackageCmd, Callout } from '@theguild/components'
+
+# Integration with Express
 
 [Express is the most popular web framework for Node.js.](https://expressjs.com/) It is a minimalist framework that provides a robust set of features to handle HTTP on Node.js applications.
 You can easily integrate GraphQL Yoga into your Express application with a few lines of code.
 
 ## Installation
 
-<PackageInstall packages={['express', 'graphql', '@graphql-yoga/node']} />
+<PackageCmd packages={['express', 'graphql', '@graphql-yoga/node']} />
 
 ## Example
 
-```ts
+```ts filename="express-example.ts"
 import express from 'express'
 import { createServer } from '@graphql-yoga/node'
 
@@ -30,4 +27,7 @@ app.listen(4000, () => {
 })
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/express)
+<Callout type="info">
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/express)
+</Callout>
