--- a/website/src/pages/docs/integrations/integration-with-koa.mdx
+++ b/website/src/pages/docs/integrations/integration-with-koa.mdx
@@ -1,16 +1,13 @@
----
-id: integration-with-koa
-title: Integration with Koa
-sidebar_label: Koa
-type: Guide
----
+import { PackageCmd, Callout } from '@theguild/components'
+
+# Integration with Koa
 
 [Koa is a new web framework designed by the team behind Express, which aims to be a smaller, more expressive, and more robust foundation for web applications and APIs.](https://koajs.com/)
-GraphQL Yoga can be integrated easily as a route to the existing Koa application with a few lines of code. [So you can benefit middlewares written for Koa with GraphQL Yoga.](https://github.com/koajs/koa/wiki)
+GraphQL Yoga can be integrated easily as a route to the existing Koa application with a few lines of code. [So you can benefit from middlewares written for Koa with GraphQL Yoga.](https://github.com/koajs/koa/wiki)
 
 ## Installation
 
-<PackageInstall packages={['koa', 'graphql', '@graphql-yoga/node']} />
+<PackageCmd packages={['koa', 'graphql', '@graphql-yoga/node']} />
 
 ## Example
 
@@ -44,4 +41,7 @@ app.listen(4000, () => {
 })
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/koa)
+<Callout type="info">
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/koa)
+</Callout>
