--- a/website/src/pages/docs/integrations/integration-with-nestjs.mdx
+++ b/website/src/pages/docs/integrations/integration-with-nestjs.mdx
@@ -1,27 +1,23 @@
----
-id: integration-with-nestjs
-title: Integration with Nest
-sidebar_label: Nest
-type: Guide
----
+import { PackageCmd, Callout } from '@theguild/components'
+
+# Integration with Nest
 
 [Nest (Nest JS)](https://nestjs.com/) is a progressive Node.js framework for building efficient, reliable and scalable server-side applications.
 
-GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypoly/graphql-yoga-nestjs) that support building standalone GraphQL APIs and Federation GraphQL APIs (Gateway and Services).
-
-<p>&nbsp;</p>
+GraphQL Yoga provides its [own Nest GraphQL Driver](https://github.com/charlypoly/graphql-yoga-nestjs) that supports building standalone GraphQL APIs and Federation GraphQL APIs (Gateway and Services).
 
 ## Standalone GraphQL API
 
 ### Installation
 
-<PackageInstall packages={['@nestjs/graphql', '@graphql-yoga/nestjs']} />
+<PackageCmd packages={['@nestjs/graphql', '@graphql-yoga/nestjs']} />
 
-_For the setup of a new Nest project, please make sure to read the [Nest GraphQL documentation](https://docs.nestjs.com/graphql/quick-start)._
+<Callout type="info">
+  For the setup of a new Nest project, please make sure to read the [Nest
+  GraphQL documentation](https://docs.nestjs.com/graphql/quick-start).
+</Callout>
 
-<p>&nbsp;</p>
-
-### Schema-first approach
+### Schema-First Approach
 
 With the following Nest project structure:
 
@@ -73,9 +69,9 @@ input CreateCatInput {
 }
 ```
 
-Our Yoga Nest GraphQL Module (`app.module.ts`) will defined as follows:
+Our Yoga Nest GraphQL Module (`app.module.ts`) will be defined as follows:
 
-```ts
+```ts filename="app.module.ts"
 import { YogaDriver, YogaDriverConfig } from '@graphql-yoga/nestjs'
 import { Module } from '@nestjs/common'
 import { GraphQLModule } from '@nestjs/graphql'
@@ -96,9 +92,7 @@ export class AppModule {}
 
 More information [on the dedicated example](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/schema-first).
 
-<p>&nbsp;</p>
-
-### Code-first approach
+### Code-First Approach
 
 The code-first approach generates the GraphQL Schema based on resolvers and models.
 
@@ -144,9 +138,9 @@ export class RecipesResolver {
 }
 ```
 
-Our Yoga Nest GraphQL Module (`app.module.ts`) will defined as follows:
+Our Yoga Nest GraphQL Module (`app.module.ts`) will be defined as follows:
 
-```ts
+```ts filename="app.module.ts"
 import { YogaDriver, YogaDriverConfig } from '@graphql-yoga/nestjs'
 import { Module } from '@nestjs/common'
 import { GraphQLModule } from '@nestjs/graphql'
@@ -166,16 +160,13 @@ export class AppModule {}
 
 More information [on the dedicated example](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/code-first).
 
-<p>&nbsp;</p>
-
----
-
-<p>&nbsp;</p>
-
 ## Apollo Federation
 
 Yoga Nest GraphQL integration supports building Apollo Federation Gateway and Services through the `YogaGatewayDriver` and `YogaFederationDriver` drivers.
 
 A complete example [is available in the repository](https://github.com/charlypoly/graphql-yoga-nestjs/tree/master/examples/graphql-federation-code-first).
 
-> ⚠️ `YogaGatewayDriver` and `YogaFederationDriver` drivers should be used with `graphql@15`.
+<Callout type="warning">
+  `YogaGatewayDriver` and `YogaFederationDriver` drivers should be used with
+  `graphql@15`.
+</Callout>
