--- a/website/src/pages/docs/integrations/integration-with-nextjs.mdx
+++ b/website/src/pages/docs/integrations/integration-with-nextjs.mdx
@@ -1,21 +1,16 @@
----
-id: integration-with-nextjs
-title: Integration with nextjs
-sidebar_label: Next.js
-type: Guide
----
+import { PackageCmd, Callout } from '@theguild/components'
+
+# Integration with Nextjs
 
 [Next.js](https://nextjs.org/) is a web framework that allows you to build websites very quickly and GraphQL Yoga can be integrated with Next.js easily as [an API Route](https://nextjs.org/docs/api-routes/api-middlewares).
 
 ## Installation
 
-<PackageInstall packages={['graphql', '@graphql-yoga/node']} />
+<PackageCmd packages={['graphql', '@graphql-yoga/node']} />
 
 ## Example
 
-`pages/api/graphql.ts`
-
-```ts
+```ts filename="pages/api/graphql.ts"
 // Next.js API route support: https://nextjs.org/docs/api-routes/introduction
 import { createServer } from '@graphql-yoga/node'
 import type { NextApiRequest, NextApiResponse } from 'next'
@@ -33,4 +28,7 @@ export default createServer<{
 }>()
 ```
 
-> You can also check a full example on our GitHub repository [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/nextjs)
+<Callout type="info">
+  You can also check a full example on our GitHub repository
+  [here](https://github.com/dotansimha/graphql-yoga/tree/master/examples/nextjs)
+</Callout>
