--- a/website/src/pages/docs/integrations/z-other-environments.mdx
+++ b/website/src/pages/docs/integrations/z-other-environments.mdx
@@ -1,9 +1,4 @@
----
-id: z-other-environments
-title: Integration with other environments
-sidebar_label: Other Environments
-type: Guide
----
+# Integration with Other Environments
 
 If you have a different environment that you want to integrate with, you can implement your middleware/handler like the example below.
 
